cluster/apps/bday-hannah/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bday-hannah
  namespace: bday
spec:
  selector:
    app: bday-hannah
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
